--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,1 +1,28 @@
-/*# sourceMappingURL=App.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Sora:wght@100;200;300;400;500;600;700;800&display=swap");
+.nav-container {
+  padding: 1rem;
+}
+.nav-container .nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.nav-container .nav a {
+  text-decoration: none;
+  color: #1C1C1C;
+}
+.nav-container .nav .nav-item-column {
+  display: flex;
+  flex-direction: column;
+  font-size: 0.8rem;
+}
+.nav-container .nav .nav-item {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+.nav-container .nav .nav-item-btn {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}/*# sourceMappingURL=App.css.map */
