--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -1,5 +1,13 @@
 @import './_variables/variables'
 
+.main-container
+    height: 90vh
+    width: 100vw
+    display: flex
+    flex-direction: column
+    // align-items: center
+    justify-content: space-between
+
 .nav-container
     padding: 1rem
     .nav
@@ -17,7 +25,56 @@
             display: flex
             align-items: center
             gap: 0.5rem
+            span
+                // font-family: $font-heading
+                font-size: 1.2rem
+                font-weight: 600
+            img
+                width: 2rem
+                height: 2rem
+                border-radius: 50%
         .nav-item-btn
             display: flex
             align-items: center
             gap: 0.5rem
+            font-size: 0.8rem
+            background: $color-secondary
+            color: $color-primary
+            padding: 0.5rem 1rem
+            border-radius: 50px
+            transition: all 0.3s ease
+            &:hover
+                transform: translateY(-0.2rem)
+        .nav-item-v
+            display: flex
+            flex-direction: column
+            transition: all 0.3s ease
+            &:hover
+                transform: translateY(-0.5rem)
+            .sub-text
+                font-size: 0.8rem
+            .text
+                font-size: 1rem
+
+.heading-container
+    display: flex
+    align-items: center
+    justify-content: center
+    padding: 6rem 0
+    .heading
+        font-family: $font-heading
+        font-size: 8rem
+
+.container-box
+    padding: 0 6rem
+    .container
+        display: flex
+        align-items: center
+        justify-content: space-between
+    .item
+        display: flex
+        flex-direction: column
+        align-items: center
+        img
+            width: 400px
+            object-fit: cover
