--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -52,9 +52,9 @@
             &:hover
                 transform: translateY(-0.5rem)
             .sub-text
-                font-size: 0.8rem
+                font-size: 0.6rem
             .text
-                font-size: 1rem
+                font-size: 0.8rem
 
 .heading-container
     display: flex
@@ -66,7 +66,7 @@
         font-size: 8rem
 
 .container-box
-    padding: 0 6rem
+    padding: 0 8rem
     .container
         display: flex
         align-items: center
@@ -75,6 +75,7 @@
         display: flex
         flex-direction: column
         align-items: center
+        font-weight: 600
         img
             width: 400px
             object-fit: cover
