--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -5,7 +5,6 @@
     width: 100vw
     display: flex
     flex-direction: column
-    // align-items: center
     justify-content: space-between
 
 .nav-container
@@ -63,7 +62,8 @@
     padding: 6rem 0
     .heading
         font-family: $font-heading
-        font-size: 8rem
+        font-size: 6rem
+        text-align: center
 
 .container-box
     padding: 0 8rem
