--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -28,6 +28,12 @@
   display: flex;
   align-items: center;
   gap: 0.5rem;
+  padding: 0.5rem;
+  border-radius: 10px;
+  transition: all 0.3s ease;
+}
+.nav-container .nav .nav-item:hover {
+  background: #dadada;
 }
 .nav-container .nav .nav-item span {
   font-size: 1.2rem;
@@ -56,15 +62,18 @@
   display: flex;
   flex-direction: column;
   transition: all 0.3s ease;
+  padding: 0.5rem;
+  border-radius: 10px;
 }
 .nav-container .nav .nav-item-v:hover {
   transform: translateY(-0.5rem);
+  background: #dadada;
 }
 .nav-container .nav .nav-item-v .sub-text {
-  font-size: 0.6rem;
+  font-size: 0.8rem;
 }
 .nav-container .nav .nav-item-v .text {
-  font-size: 0.8rem;
+  font-size: 1rem;
 }
 
 .heading-container {
@@ -80,20 +89,48 @@
 }
 
 .container-box {
-  padding: 0 8rem;
+  padding: 0 1rem;
 }
 .container-box .container {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
-.container-box .item {
+.container-box .container .item {
   display: flex;
   flex-direction: column;
   align-items: center;
   font-weight: 600;
 }
-.container-box .item img {
+.container-box .container .item img {
+  width: 400px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.container-box .container .left {
+  display: flex;
+  gap: 1rem;
+}
+.container-box .container .left .col {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.container-box .container .left .col a {
+  text-decoration: none;
+  color: #1C1C1C;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  padding: 0.5rem;
+  border-radius: 10px;
+  transition: all 0.3s ease;
+}
+.container-box .container .left .col a:hover {
+  transform: translateY(-0.2rem);
+  background: #dadada;
+}
+.container-box .container .right img {
   width: 400px;
   -o-object-fit: cover;
      object-fit: cover;
