--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -24,6 +24,11 @@
             display: flex
             align-items: center
             gap: 0.5rem
+            padding: 0.5rem
+            border-radius: 10px
+            transition: all 0.3s ease
+            &:hover
+                background: $color-tertiary
             span
                 // font-family: $font-heading
                 font-size: 1.2rem
@@ -48,12 +53,15 @@
             display: flex
             flex-direction: column
             transition: all 0.3s ease
+            padding: 0.5rem
+            border-radius: 10px
             &:hover
                 transform: translateY(-0.5rem)
+                background: $color-tertiary
             .sub-text
-                font-size: 0.6rem
-            .text
                 font-size: 0.8rem
+            .text
+                font-size: 1rem
 
 .heading-container
     display: flex
@@ -66,16 +74,40 @@
         text-align: center
 
 .container-box
-    padding: 0 8rem
+    padding: 0 1rem
+    // background: #000
     .container
         display: flex
         align-items: center
-        justify-content: space-between
-    .item
-        display: flex
-        flex-direction: column
-        align-items: center
-        font-weight: 600
-        img
-            width: 400px
-            object-fit: cover
+        justify-content: space-evenly
+        .item
+            display: flex
+            flex-direction: column
+            align-items: center
+            font-weight: 600
+            img
+                width: 400px
+                object-fit: cover
+        .left
+            display: flex
+            gap: 1rem
+            .col
+                display: flex
+                flex-direction: column
+                gap: 1rem
+                a
+                    text-decoration: none
+                    color: $color-secondary
+                    display: flex
+                    align-items: center
+                    gap: 0.5rem
+                    padding: 0.5rem
+                    border-radius: 10px
+                    transition: all 0.3s ease
+                    &:hover
+                        transform: translateY(-0.2rem)
+                        background: $color-tertiary
+        .right
+            img
+                width: 400px
+                object-fit: cover
