--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -111,3 +111,55 @@
             img
                 width: 400px
                 object-fit: cover
+
+        .card-container
+            width: 100%
+            .card-box
+                display: flex
+                flex-direction: column
+                gap: 2rem
+                padding: 1rem 0
+                // background: #000
+                .heading
+                    font-size: 2rem
+                    font-weight: 600
+                .cards
+                    display: flex
+                    // align-items: flex-start
+                    flex-wrap: wrap
+                    gap: 1rem
+                    // width: fit-content
+                    // margin: 0 auto
+                    // background: #000
+.card
+    width: 24%
+    display: flex
+    flex-direction: column
+    justify-content: space-between
+    border: 1px solid $color-tertiary
+    border-radius: 10px
+    img
+        height: 250px
+        width: 100%
+        object-fit: cover
+    .card-body
+        padding: 1rem
+        display: flex
+        flex-direction: column
+        gap: 1rem
+        .title
+            font-size: 1.2rem
+            font-weight: 600
+        .description
+            color: #868686
+    a
+        padding: 0 1rem 1rem 1rem
+        // border-radius: 10px
+        text-decoration: none
+        color: $color-secondary
+        // font-size: 0.8rem
+        display: flex
+        align-items: center
+        gap: 0.2rem
+        &:hover
+            text-decoration: underline
