--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -188,4 +188,9 @@
 }
 .card a:hover {
   text-decoration: underline;
+}
+
+.menu {
+  width: 100vw;
+  padding: 6rem 0;
 }/*# sourceMappingURL=App.css.map */
