--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -8,6 +8,7 @@
     justify-content: space-between
 
 .nav-container
+    // width: 100%
     padding: 1rem
     .nav
         display: flex
@@ -160,3 +161,7 @@
         gap: 0.2rem
         &:hover
             text-decoration: underline
+
+.menu
+    width: 100vw
+    padding: 6rem 0
