--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -159,7 +159,10 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  gap: 0.5rem;
+  transition: all 0.3s ease;
+}
+.card:hover {
+  box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;
 }
 .card img {
   height: 250px;
@@ -168,6 +171,7 @@
      object-fit: cover;
 }
 .card .card-body {
+  padding: 1rem;
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
@@ -180,6 +184,7 @@
   color: #868686;
 }
 .card a {
+  padding: 0 1rem 1rem 1rem;
   text-decoration: none;
   color: #1C1C1C;
   display: flex;
