--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -138,13 +138,17 @@
     flex-direction: column
     justify-content: space-between
     // border: 1px solid $color-tertiary
-    gap: 0.5rem
+    transition: all 0.3s ease
+    // border: 1px solid $color-primary
+    &:hover
+        // border: 1px solid $color-tertiary
+        box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px
     img
         height: 250px
         width: 100%
         object-fit: cover
     .card-body
-        // padding: 1rem
+        padding: 1rem
         display: flex
         flex-direction: column
         gap: 0.5rem
@@ -154,6 +158,7 @@
         .description
             color: #868686
     a
+        padding: 0 1rem 1rem 1rem
         text-decoration: none
         color: $color-secondary
         display: flex
