--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -8,7 +8,6 @@
     justify-content: space-between
 
 .nav-container
-    // width: 100%
     padding: 1rem
     .nav
         display: flex
@@ -85,7 +84,9 @@
             display: flex
             flex-direction: column
             align-items: center
-            font-weight: 600
+            font-family: $font-body
+            font-size: 1.2rem
+            font-weight: 900
             img
                 width: 400px
                 object-fit: cover
@@ -124,6 +125,7 @@
                 .heading
                     font-size: 2rem
                     font-weight: 600
+                    font-family: $font-heading
                 .cards
                     display: flex
                     // align-items: flex-start
@@ -156,6 +158,8 @@
             font-size: 1.2rem
             font-weight: 600
         .description
+            font-size: 1.2rem
+            font-family: $font-body
             color: #868686
     a
         padding: 0 1rem 1rem 1rem
@@ -166,6 +170,28 @@
         gap: 0.2rem
         &:hover
             text-decoration: underline
+
+.about
+    .about-container
+        .row
+            display: flex
+            img
+                width: 50%
+                object-fit: cover
+            .text
+                // padding: 0 1rem
+                width: 50%
+                display: flex
+                flex-direction: column
+                gap: 1rem
+                h1
+                    font-size: 7rem
+                    font-family: $font
+                    color: gray
+                    i
+                        color: $color-secondary
+                    span
+                        color: $color-secondary
 
 .menu
     width: 100vw
