--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -235,4 +235,51 @@
 .menu {
   width: 100vw;
   padding: 6rem 0;
+}
+
+.form-container {
+  width: 100vw;
+  padding: 6rem 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.form-container form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.form-container form .form-field {
+  padding: 1rem;
+  border: 1px solid #dadada;
+  border-radius: 10px;
+}
+.form-container form .form-field input {
+  border: none;
+  outline: none;
+  font-size: 1rem;
+  font-family: "Sora", sans-serif;
+  background: transparent;
+}
+.form-container form .btn-group {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.form-container form .btn-group button {
+  padding: 1rem;
+  border-radius: 10px;
+  border: none;
+  outline: none;
+  font-size: 1rem;
+  font-family: "Sora", sans-serif;
+  font-weight: 600;
+  background: #1C1C1C;
+  color: #ebebeb;
+  cursor: pointer;
+}
+.form-container form .btn-group .btn-reg {
+  background: #dadada;
+  color: #1C1C1C;
+  border: 4px solid #1C1C1C;
 }/*# sourceMappingURL=App.css.map */
