--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -203,3 +203,47 @@
 .menu
     width: 100vw
     padding: 6rem 0
+
+.form-container
+    width: 100vw
+    // height: 80vh
+    padding: 6rem 0
+    display: flex
+    align-items: center
+    justify-content: center
+    form
+        display: flex
+        flex-direction: column
+        gap: 1rem
+        .form-field
+            padding: 1rem
+            border: 1px solid $color-tertiary
+            border-radius: 10px
+            // background: $color-secondary
+            input
+                border: none
+                outline: none
+                font-size: 1rem
+                font-family: $font
+                background: transparent
+                // color: $color-primary
+        .btn-group
+            display: flex
+            flex-direction: column
+            gap: 1rem
+            // justify-content: space-between
+            button
+                padding: 1rem
+                border-radius: 10px
+                border: none
+                outline: none
+                font-size: 1rem
+                font-family: $font
+                font-weight: 600
+                background: $color-secondary
+                color: $color-primary
+                cursor: pointer
+            .btn-reg
+                background: $color-tertiary
+                color: $color-secondary
+                border: 4px solid $color-secondary
