- added persistent login

--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -148,7 +148,7 @@
     // color: $color-primary
     &:hover
         transform: translateY(-0.2rem)
-        background: $color-tertiary
+        // background: $color-tertiary
         // border: 1px solid $color-tertiary
         // box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px
     img
