hidden reg btn added add works form

--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -76,6 +76,23 @@
 
 .container-box
     padding: 0 1rem
+    display: flex
+    flex-direction: column
+    align-items: center
+    justify-content: center
+    .btn
+        display: flex
+        align-items: center
+        gap: 0.5rem
+        font-size: 0.8rem
+        background: $color-secondary
+        color: $color-primary
+        padding: 0.5rem 1rem
+        border-radius: 50px
+        cursor: pointer
+        transition: all 0.3s ease
+        &:hover
+            transform: translateY(-0.2rem)
     // background: #000
     .container
         display: flex
@@ -129,6 +146,7 @@
                     font-family: $font-heading
                 .cards
                     display: flex
+                    // width: 100%
                     // align-items: flex-start
                     flex-wrap: wrap
                     gap: 2rem
@@ -136,16 +154,19 @@
                     // margin: 0 auto
                     // background: #000
 .card
-    width: 22%
+    width: 23.5%
     display: flex
     flex-direction: column
     justify-content: space-between
+    align-items: flex-start
     // border: 1px solid $color-tertiary
     transition: all 0.3s ease
-    border: 1px solid $color-tertiary
-    border-radius: 10px
+    // border: 1px solid $color-tertiary
+    // border-radius: 10px
     // background: $color-secondary
     // color: $color-primary
+    background: $color-secondary
+    color: $color-primary
     &:hover
         transform: translateY(-0.2rem)
         // background: $color-tertiary
@@ -168,12 +189,18 @@
             font-family: $font-body
             color: #868686
     a
-        padding: 0 1rem 1rem 1rem
-        text-decoration: none
-        color: $color-secondary
         display: flex
         align-items: center
-        gap: 0.2rem
+        gap: 0.5rem
+        font-size: 0.8rem
+        // background: $color-primary
+        color: $color-primary
+        padding: 0.5rem 1rem
+        // border-radius: 50px
+        cursor: pointer
+        transition: all 0.3s ease
+        margin: 1rem 0
+        text-decoration: none
         &:hover
             text-decoration: underline
 
@@ -226,7 +253,12 @@
                 font-size: 1rem
                 font-family: $font
                 background: transparent
-                // color: $color-primary
+            textarea
+                border: none
+                outline: none
+                font-size: 1rem
+                font-family: $font
+                background: transparent
         .btn-group
             display: flex
             flex-direction: column
