--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -91,6 +91,25 @@
 
 .container-box {
   padding: 0 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.container-box .btn {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  font-size: 0.8rem;
+  background: #1C1C1C;
+  color: #ebebeb;
+  padding: 0.5rem 1rem;
+  border-radius: 50px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+.container-box .btn:hover {
+  transform: translateY(-0.2rem);
 }
 .container-box .container {
   display: flex;
@@ -159,13 +178,14 @@
 }
 
 .card {
-  width: 22%;
+  width: 23.5%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: flex-start;
   transition: all 0.3s ease;
-  border: 1px solid #dadada;
-  border-radius: 10px;
+  background: #1C1C1C;
+  color: #ebebeb;
 }
 .card:hover {
   transform: translateY(-0.2rem);
@@ -192,12 +212,16 @@
   color: #868686;
 }
 .card a {
-  padding: 0 1rem 1rem 1rem;
-  text-decoration: none;
-  color: #1C1C1C;
   display: flex;
   align-items: center;
-  gap: 0.2rem;
+  gap: 0.5rem;
+  font-size: 0.8rem;
+  color: #ebebeb;
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  margin: 1rem 0;
+  text-decoration: none;
 }
 .card a:hover {
   text-decoration: underline;
@@ -254,6 +278,13 @@
   border-radius: 10px;
 }
 .form-container form .form-field input {
+  border: none;
+  outline: none;
+  font-size: 1rem;
+  font-family: "Sora", sans-serif;
+  background: transparent;
+}
+.form-container form .form-field textarea {
   border: none;
   outline: none;
   font-size: 1rem;
