--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -290,6 +290,7 @@
   font-size: 1rem;
   font-family: "Sora", sans-serif;
   background: transparent;
+  width: 100%;
 }
 .form-container form .btn-group {
   display: flex;
