--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -259,6 +259,7 @@
                 font-size: 1rem
                 font-family: $font
                 background: transparent
+                width: 100%
         .btn-group
             display: flex
             flex-direction: column
