--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -95,6 +95,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  width: 100%;
 }
 .container-box .btn {
   display: flex;
@@ -107,11 +108,13 @@
   border-radius: 50px;
   cursor: pointer;
   transition: all 0.3s ease;
+  margin-bottom: 1rem;
 }
 .container-box .btn:hover {
   transform: translateY(-0.2rem);
 }
 .container-box .container {
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
@@ -182,10 +185,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: flex-start;
   transition: all 0.3s ease;
-  background: #1C1C1C;
-  color: #ebebeb;
 }
 .card:hover {
   transform: translateY(-0.2rem);
@@ -209,24 +209,29 @@
 .card .card-body .description {
   font-size: 1.2rem;
   font-family: "Cormorant Garamond", serif;
-  color: #868686;
 }
-.card a {
+.card .btn-group {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.card .btn-group a {
   display: flex;
   align-items: center;
   gap: 0.5rem;
   font-size: 0.8rem;
+  background: #1C1C1C;
   color: #ebebeb;
   padding: 0.5rem 1rem;
+  border-radius: 50px;
   cursor: pointer;
   transition: all 0.3s ease;
   margin: 1rem 0;
   text-decoration: none;
 }
-.card a:hover {
+.card .btn-group a:hover {
   text-decoration: underline;
 }
-
 .about .about-container .row {
   display: flex;
 }
