--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -211,6 +211,9 @@
                 text-decoration: underline
         .date
             // font-size: 0.8rem
+            display: flex
+            align-items: center
+            gap: 0.5rem
 
 .about
     .about-container
