--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -324,4 +324,52 @@
   background: #dadada;
   color: #1C1C1C;
   border: 4px solid #1C1C1C;
+}
+
+@media screen and (max-width: 786px) {
+  .main-container {
+    width: 100vw;
+    height: auto;
+  }
+  .nav-container .nav {
+    flex-wrap: wrap;
+  }
+  .heading-container {
+    padding: 2rem 0;
+  }
+  .heading-container .heading {
+    font-size: 4rem;
+  }
+  .container-box {
+    padding: 2rem 0;
+  }
+  .container-box .container {
+    flex-direction: column;
+  }
+  .container-box .container .item {
+    width: 100%;
+  }
+  .container-box .container .item img {
+    width: 100%;
+  }
+  .container-box .container .left {
+    width: 100%;
+    flex-direction: column;
+  }
+  .container-box .container .right img {
+    width: 100%;
+  }
+  .about .about-container .row {
+    flex-direction: column;
+  }
+  .about .about-container .row img {
+    width: 100%;
+  }
+  .about .about-container .row .text {
+    width: 100%;
+    padding: 1rem 0;
+  }
+  .about .about-container .row .text h1 {
+    font-size: 2rem;
+  }
 }/*# sourceMappingURL=App.css.map */
