--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -291,3 +291,45 @@
                 background: $color-tertiary
                 color: $color-secondary
                 border: 4px solid $color-secondary
+
+@media screen and (max-width: 786px)
+    .main-container
+        width: 100vw
+        height: auto
+        // padding: 0
+    .nav-container
+        // padding: 0
+        .nav
+            flex-wrap: wrap
+    .heading-container
+        padding: 2rem 0
+        .heading
+            font-size: 4rem
+    .container-box
+        padding: 2rem 0
+        .container
+            flex-direction: column
+            .item
+                width: 100%
+                img
+                    width: 100%
+            .left
+                width: 100%
+                flex-direction: column
+                .col
+
+            .right
+                img
+                    width: 100%
+
+    .about
+        .about-container
+            .row
+                flex-direction: column
+                img
+                    width: 100%
+                .text
+                    width: 100%
+                    padding: 1rem 0
+                    h1
+                        font-size: 2rem
