--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -368,12 +368,14 @@
         margin: 0 auto
         // padding: 4rem 1rem
         // padding: 2rem 0
-        .form-field
-            // padding: 0.5rem
-            // width: 100%
-            input
-                width: 100%
-                // font-size: 1rem
-            textarea
-                width: 100%
-                // font-size: 1rem
+        form
+            width: 100%
+            .form-field
+                // padding: 0.5rem
+                // width: 100%
+                input
+                    width: 100%
+                    // font-size: 1rem
+                textarea
+                    width: 100%
+                    // font-size: 1rem
