--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -149,12 +149,12 @@
                     font-family: $font-heading
                 .cards
                     display: flex
-                    // width: 100%
+                    width: 96%
                     // align-items: flex-start
                     flex-wrap: wrap
                     gap: 2rem
                     // width: fit-content
-                    // margin: 0 auto
+                    margin: 0 auto
                     // background: #000
 .card
     width: 23.5%
